2001-02-24  Arturo Espinosa  <arturo@ximian.com>

	* network.pl.in: peerdns support.
	* util.pl.in (xst_util_struct_eq): oops, forgot to rename inner calls.
	
2001-02-24  Arturo Espinosa  <arturo@ximian.com>

	* network-conf.in (xml_print): cosmetic changes.
	* network.pl.in (xst_network_rh62_interface_set_by_dev,
	xst_network_rh62_interface_set) better criterion for device activation.
	* network.pl.in: chap support, lots of bug fixes to activation stuff.
	* util.pl.in (xst_util_struct_eq): renamed from cmp due to different semantic.
	
2001-02-23  Hans Petter Jansson  <hpj@ximian.com>

	* file.pl.in (xst_file_get_base_path): Implement.
	  (xst_file_get_tmp_path): Implement.
	  (xst_file_get_backup_path): Implement.
	  (xst_backup_file): Use xst_file_get_backup_path.
	  (xst_open_filter_write_from_names): Use xst_file_get_tmp_path.

2001-02-23  Arturo Espinosa  <arturo@ximian.com>

	* replace.pl.in (xst_replace_sh): surround by quotes after escaping.
	
2001-02-23  Arturo Espinosa  <arturo@ximian.com>

	* network-conf.in (xml_parse-dialing): minor naming change.
	* network.pl.in (xst_network_dialing_set): "Stupid mode" corresponding tag
	  is "stupid", not "mode". This was causing the "= 0" bug.
	* replace.pl.in (xst_replace_ini): Forgot the case where you found the
	  section, but not the var. Handle this.
	
2001-02-23  Arturo Espinosa  <arturo@ximian.com>

	* file.pl.in (xst_open_read_from_names): debug reporting opened file,
	  but with the xst_prefix also.
	* network-conf.in: use xst_xml_get_pcdata instead of get_word.
	* network.pl.in (xst_network_sysconfig_ifaces_get_existing): use xst_prefix
	  to open directory.
	* network.pl.in: added "file" attrib to interface structures, to know from
	  which file an interface configuration came. This tag could be the same
	  value accross all interfaces for some distros (RH required, dunno others).
	* network.pl.in (xst_network_interfaces_down_changed): get active interfaces